--- a/eclipse_ws/biobank2/build.properties
+++ b/eclipse_ws/biobank2/build.properties
@@ -6,7 +6,8 @@ bin.includes = META-INF/,\
                lib/,\
                lib/org.eclipse.nebula.cwt_0.9.0.HEAD.jar,\
                lib/org.eclipse.nebula.widgets.cdatetime_0.14.0.HEAD.jar,\
-               plugin.xml
+               plugin.xml,\
+               bin/log4j.properties
 jars.compile.order = conf/,\
                      .
 output.conf/ = bin/
