--- a/.gitignore
+++ b/.gitignore
@@ -18,9 +18,11 @@ eclipse_ws/biobank.common/bin
 eclipse_ws/biobank2.importer/bin
 eclipse_ws/biobank2.tests/bin
 eclipse_ws/biobank2/lib/*.jar
-eclipse_ws/biobank.common/lib/*.jar
-eclipse_ws/biobank2.importer/lib/*.jar
-eclipse_ws/biobank2.tests/lib/*.jar
+eclipse_ws/biobank2.importer/conf
+eclipse_ws/biobank2.tests/conf
+eclipse_ws/biobank.common/lib/*
+eclipse_ws/biobank2.importer/lib/*
+eclipse_ws/biobank2.tests/lib/*
 eclipse_ws/biobank2/conf
 eclipse_ws/biobank2/scanlib.*
 eclipse_ws/biobank2/*.bmp
