--- a/eclipse_ws/biobank2/plugin.xml
+++ b/eclipse_ws/biobank2/plugin.xml
@@ -1003,6 +1003,11 @@
            schemeId="org.eclipse.ui.defaultAcceleratorConfiguration"
            sequence="ALT+S">
       </key>
+      <key
+            commandId="edu.ualberta.med.biobank.commands.quit"
+            schemeId="org.eclipse.ui.defaultAcceleratorConfiguration"
+            sequence="SHIFT+CTRL+Q">
+      </key>
    </extension>
     <extension
          point="org.eclipse.ui.preferencePages">
