--- a/eclipse_ws/biobank2/plugin.xml
+++ b/eclipse_ws/biobank2/plugin.xml
@@ -605,84 +605,9 @@
                     </reference>
                </visibleWhen>
             </command>
-            <command
-                  commandId="edu.ualberta.med.biobank.commands.studyAdd"
-                  icon="icons/studies_add.png"
-                  label="Add Study"
-                  style="push">
-               <visibleWhen
-                     checkEnabled="false">
-                  <reference
-                        definitionId="biobank2.mainPerpectiveSelected">
-                  </reference>
-               </visibleWhen>                  
-            </command>
-            <command
-                  commandId="edu.ualberta.med.biobank.commands.clinicAdd"
-                  icon="icons/clinics_add.png"
-                  label="Add Clinic"
-                  style="push">
-               <visibleWhen
-                     checkEnabled="false">
-                  <reference
-                        definitionId="biobank2.mainPerpectiveSelected">
-                  </reference>
-               </visibleWhen>                  
-            </command>
-            <command
-                  commandId="edu.ualberta.med.biobank.commands.containerTypeAdd"
-                  icon="icons/containerTypes_add.png"
-                  label="Add Container Type"
-                  style="push">
-               <visibleWhen
-                     checkEnabled="false">
-                  <reference
-                        definitionId="biobank2.mainPerpectiveSelected">
-                  </reference>
-               </visibleWhen>                  
-            </command>
-            <command
-                  commandId="edu.ualberta.med.biobank.commands.containerAdd"
-                  icon="icons/containers_add.png"
-                  label="Add Container"
-                  style="push">
-               <visibleWhen
-                     checkEnabled="false">
-                  <reference
-                        definitionId="biobank2.mainPerpectiveSelected">
-                  </reference>
-               </visibleWhen>                  
-            </command>
          </toolbar>
          <toolbar
                id="edu.ualberta.med.biobank.toolbar.mainPerpective">
-            <command
-               commandId="edu.ualberta.med.biobank.commands.patientAdmin"
-               icon="icons/patientPerspective.png"
-               label="Patients View"
-               style="push">
-               <visibleWhen
-                     checkEnabled="false">
-                  <reference
-                        definitionId="biobank2.mainPerpectiveSelected">
-                  </reference>
-               </visibleWhen>
-            </command>
-            <command
-               commandId="edu.ualberta.med.biobank.commands.reports"
-               icon="icons/reports.png"
-               label="Reports View"
-               style="push">
-               <visibleWhen
-                     checkEnabled="false">
-                  <reference
-                        definitionId="biobank2.mainPerpectiveSelected">
-                  </reference>
-               </visibleWhen>
-            </command>
-         </toolbar> 
-         <toolbar
-               id="edu.ualberta.med.biobank.toolbar.patientsPerspective">
             <command
                   commandId="edu.ualberta.med.biobank.commands.mainAdmin"
                   icon="icons/mainPerspective.png"
@@ -702,6 +627,84 @@
                         </reference>
                      </not>
                   </and>
+               </visibleWhen>
+            </command>
+            <command
+                  commandId="edu.ualberta.med.biobank.commands.studyAdd"
+                  icon="icons/studies_add.png"
+                  label="Add Study"
+                  style="push">
+               <visibleWhen
+                     checkEnabled="false">
+                  <reference
+                        definitionId="biobank2.mainPerpectiveSelected">
+                  </reference>
+               </visibleWhen>
+            </command>
+            <command
+                  commandId="edu.ualberta.med.biobank.commands.clinicAdd"
+                  icon="icons/clinics_add.png"
+                  label="Add Clinic"
+                  style="push">
+               <visibleWhen
+                     checkEnabled="false">
+                  <reference
+                        definitionId="biobank2.mainPerpectiveSelected">
+                  </reference>
+               </visibleWhen>
+            </command>
+            <command
+                  commandId="edu.ualberta.med.biobank.commands.containerTypeAdd"
+                  icon="icons/containerTypes_add.png"
+                  label="Add Container Type"
+                  style="push">
+               <visibleWhen
+                     checkEnabled="false">
+                  <reference
+                        definitionId="biobank2.mainPerpectiveSelected">
+                  </reference>
+               </visibleWhen>
+            </command>
+            <command
+                  commandId="edu.ualberta.med.biobank.commands.containerAdd"
+                  icon="icons/containers_add.png"
+                  label="Add Container"
+                  style="push">
+               <visibleWhen
+                     checkEnabled="false">
+                  <reference
+                        definitionId="biobank2.mainPerpectiveSelected">
+                  </reference>
+               </visibleWhen>
+            </command>
+         </toolbar>
+         <toolbar
+               id="edu.ualberta.med.biobank.toolbar.reportsPerspective">
+            <command
+                  commandId="edu.ualberta.med.biobank.commands.reports"
+                  icon="icons/reports.png"
+                  label="Reports View"
+                  style="push">
+               <visibleWhen
+                     checkEnabled="false">
+                  <reference
+                        definitionId="biobank2.mainPerpectiveSelected">
+                  </reference>
+               </visibleWhen>
+            </command>
+         </toolbar> 
+         <toolbar
+               id="edu.ualberta.med.biobank.toolbar.patientsPerspective">
+            <command
+                  commandId="edu.ualberta.med.biobank.commands.patientAdmin"
+                  icon="icons/patientPerspective.png"
+                  label="Patients View"
+                  style="push">
+               <visibleWhen
+                     checkEnabled="false">
+                  <reference
+                        definitionId="biobank2.mainPerpectiveSelected">
+                  </reference>
                </visibleWhen>
             </command>
             <command
