reworked reports view for simple queries only

--- a/eclipse_ws/biobank2/.classpath
+++ b/eclipse_ws/biobank2/.classpath
@@ -14,5 +14,6 @@
 	<classpathentry kind="lib" path="lib/org.eclipse.nebula.cwt_0.9.0.HEAD.jar"/>
 	<classpathentry kind="lib" path="lib/org.eclipse.nebula.widgets.cdatetime_0.14.0.HEAD.jar"/>
 	<classpathentry kind="con" path="org.eclipse.tptp.platform.instrumentation.ui.ContainerInitializer/Build to Manage Libraries"/>
+	<classpathentry kind="lib" path="C:/Documents and Settings/aaron/My Documents/Downloads/junit-4.7-src.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
