add container junit test

--- a/eclipse_ws/biobank2.tests/.classpath
+++ b/eclipse_ws/biobank2.tests/.classpath
@@ -25,5 +25,6 @@
 	<classpathentry kind="lib" path="lib/sdk-writable-client-framework.jar"/>
 	<classpathentry kind="lib" path="lib/spring.jar"/>
 	<classpathentry kind="lib" path="lib/xercesImpl.jar"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/biobank.common"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
