testSite test case + 1.05->1.10 upgrade

--- a/.gitignore
+++ b/.gitignore
@@ -33,3 +33,4 @@ runtime-BioSampleScan.BioSampleScan/
 runtime-BioSampleScan.product1/
 runtime-biobank2.product/
 runtime-biobank2.product1/
+backup/
