--- a/build.xml
+++ b/build.xml
@@ -221,7 +221,7 @@
 		<uptodate property="jboss.uptodate" targetfile="${env.JBOSS_HOME}/server/default/deploy/biobank2.war" srcfile="${cacore.sdk.dir}/output/biobank2/package/webapp/biobank2.war" />
 	</target>
 
-	<target name="deploy-jboss" depends="check-jboss-uptodate" description="deploys the caCORE SDK webapp to JBoss" unless="jboss.uptodate">
+	<target name="deploy-jboss" depends="package-webapp-orm,check-jboss-uptodate" description="deploys the caCORE SDK webapp to JBoss" unless="jboss.uptodate">
 		<fail unless="env.JBOSS_HOME" message="$JBOSS_HOME not defined" />
 		<copy file="${secu-log.dir}/jboss/login-config.xml" tofile="${env.JBOSS_HOME}/server/default/conf/login-config.xml" overwrite="true" />
 		<delete file="${env.JBOSS_HOME}/server/default/deploy/mysql-ds.xml" />
@@ -240,11 +240,19 @@
 		<antcall target="deploy-jboss" />
 	</target>
 
-	<target name="schema" description="generates the database schema for the caCORE SDK data model">
+	<target name="schema" depends="sdk" description="generates the database schema for the caCORE SDK data model">
 		<ant dir="${schema.dir}" target="schemaexport" inheritRefs="false" />
 	</target>
 
 	<target name="dbcreate" description="creates the default tables">
+		<sql driver="${mysql.driver.string}" url="jdbc:mysql://${database.host}:${database.port}/" userid="${database.username}" password="${database.password}">
+			<transaction src="${data.sql.dir}/createdatabase.sql" />
+			<classpath>
+				<fileset dir="${cacore.sdk.dir}/system/lib">
+					<include name="*.jar" />
+				</fileset>
+			</classpath>
+		</sql>
 		<antcall target="schema" />
 		<sql driver="${mysql.driver.string}" url="jdbc:mysql://${database.host}:${database.port}/${database.name}" userid="${database.username}" password="${database.password}">
 			<transaction src="${data.sql.dir}/pvInfoPossible.sql" />
