--- a/eclipse_ws/biobank2/build.properties
+++ b/eclipse_ws/biobank2/build.properties
@@ -7,6 +7,7 @@ bin.includes = META-INF/,\
                lib/org.eclipse.nebula.cwt_0.9.0.HEAD.jar,\
                lib/org.eclipse.nebula.widgets.cdatetime_0.14.0.HEAD.jar,\
                plugin.xml,\
-               .
+               .,\
+               plugin_customization.ini
 output.conf/ = bin/
 Bundle-NativeCode: /scanlib.dll
